Finally fixed the silly glowing button border looking slightly too dark and added the wire and hook for picture frames I've been thinking about.

--- a/media-queries/style.css
+++ b/media-queries/style.css
@@ -463,6 +463,35 @@ background-size: 100px 100px;
   }
 }
 
+/* CREDIT: Picture frame styling code taken from an anonymous Fiddle user at https://jsfiddle.net/cybPh/ */
+
+.listed-project-image:before {
+  border-left: .2em solid #222;
+  border-top: .2em solid #222;
+  /* border-radius: .3em; */
+  box-shadow: -.1em -.2em .1em rgba(0, 0, 0, .3);
+  content: '';
+  height: 8.3em;
+  aspect-ratio: 1 / 1;
+  position: absolute;
+  top: -8.81em;
+  translate: -50% 0;
+  transform: rotate(45deg);
+}
+
+.listed-project-image:after {
+    background: #555;
+    border-radius: 50%;
+    box-shadow: inset 0 .1em .1em hsla(0,0%,100%,.3),
+                0 .2em .4em hsla(0,0%,0%,.6);
+    content: '';
+    height: .6em;
+    aspect-ratio: 1 / 1;
+    position: absolute;
+    top: -10.7em;
+    translate: -50% 0;
+}
+
 .listed-project-image {
   width: 20em;
   aspect-ratio: 1 / 1;
@@ -624,7 +653,7 @@ background-size: 100px 100px;
 }
 
 .project-button-container-glow:hover .project-button-glow:after {
-  box-shadow: -.205em .405em .3em 0 rgba(0, 0, 0, .25) inset, .205em -.405em .3em 0 rgba(0, 0, 0, .25) inset, 0 0 .2em .1em rgba(0, 0, 0, .40);
+  box-shadow: -.205em .405em .3em 0 rgba(0, 0, 0, .25) inset, .205em -.405em .3em 0 rgba(0, 0, 0, .25) inset;
   transition: all 0.3s ease-in-out;
 }
 
@@ -674,7 +703,7 @@ background-size: 100px 100px;
 	height: calc(100% - .39em);
   
 	background: rgb(25, 8, 8);
-  box-shadow: -.205em .405em .5em 0 rgba(0, 0, 0, .25) inset, .205em -.405em .5em 0 rgba(70, 70, 70, 0.25) inset, .2em -.3em .5em .1em rgba(0, 0, 0, .25);
+  box-shadow: -.205em .405em .5em 0 rgba(0, 0, 0, .25) inset, .205em -.405em .5em 0 rgba(70, 70, 70, 0.25) inset;
   border-radius: 0.5em;
   transition: all 0.2s ease-in-out;
 }
@@ -944,6 +973,16 @@ background-size: 100px 100px;
 
   .listed-project-image {
     width: auto;
+  }
+
+  .listed-project-image:before {
+    height: 8.3em;
+    top: -8.81em;
+  }
+  
+  .listed-project-image:after {
+      height: .6em;
+      top: -10.7em;
   }
 
   .listed-project-content {
